# csl_mr_slam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
config/: agent_config.sh
csl_common/: CMakeLists.txt  package.xml
csl_common/config/joystick/: README.md  holonomic.config.yaml  non-holonomic.config.yaml
csl_common/launch/: setup_multimaster.launch  setup_state_publishers.launch  setup_visuals.launch  teleop_generic.launch  teleop_poulias.launch
csl_common/scripts/: setup_visuals_delayed.sh
csl_hw_setup/: CMakeLists.txt  README.md  package.xml
csl_hw_setup/ansible/: README.md  ansible.cfg  hosts  main.yml  pip_test.yml  push_code_to_robots.yml  setup_prereqs.yml  test.yml  test_apt.yml  test_cond_var.yml  test_env.yml  test_handlers.yml
csl_hw_setup/ansible/group_vars/: all  odroids
csl_hw_setup/config/: 20161102_experiment_youbot.sh  agent_config.sh  youbot_config.sh
csl_hw_setup/config/dev_permissions/: README.md  mr_slam.rules
csl_hw_setup/config/joystick/: README.md  non-holonomic-simul.config.yaml  youbot.config.yaml
csl_hw_setup/config/slam/: 20161102_experiment_youbot.sh  20170421_pioneer2dx.sh  README.md  nickkoukubuntu  nickkoukubuntu_poulias_drivers  odroidu2  odroidu2_pioneer_2at_poulias  odroidxu3  template_config.sh
csl_hw_setup/launch/plumbing/: README.md  generate_MRPT_rosbag.launch  pub_geom_transforms.launch  setup_drivers_aria.launch  setup_drivers_pioneer_poulias.launch  setup_drivers_youbot.launch  setup_laser_hokuyo.launch  setup_laser_sick.launch  setup_onboard_camera.launch  setup_roof_cameras.launch  teleop_generic.launch  teleop_poulias.launch
csl_hw_setup/launch/porcelain/: README.md  gather_ground_truth_data_bag.launch  gather_sr_graphslam_bag.launch  inspect_graphslam_real.launch  run_graphSLAM_bag.launch  run_graphSLAM_real.launch  run_graphslam_real.launch  run_sr_graphslam.launch  run_sr_graphslam_bag.launch  run_sr_graphslam_from_bag.launch  run_sr_graphslam_real.launch  setup_graphSLAM_agent.launch  setup_mr_slam.launch  setup_n_run_graphSLAM.launch  setup_roof_cameras.launch  setup_slam_agent.launch
csl_hw_setup/scripts/: route_multicast.py  setup_ssh_access.sh
csl_hw_setup/scripts/ad_hoc_network/: README.md  access_internet.conf.template  setup_adhoc.conf.template  setup_adhoc.py  setup_adhoc.py.prior  setup_internet_adhoc_prov.sh  setup_network.py
csl_hw_setup/scripts/ad_hoc_network/example_files/: hosts_example_file  multi_robot_adhoc  sample_iptables_internet_prov_config  sample_iptables_internet_prov_configuration  setup_adhoc.conf
csl_mr_slam/: CMakeLists.txt  package.xml
csl_robot_descriptions/: CMakeLists.txt  README.md  package.xml
csl_robot_descriptions/defs/: camera.xacro  hokuyo_laser.xacro  marker.xacro  materials.xacro  pioneer3at.xacro  pioneer3at_body.xacro  pioneer_3at.xacro  pioneer_3at_body.xacro
csl_robots_gazebo/: CMakeLists.txt  package.xml
csl_robots_gazebo/config/: simulation_config.sh
csl_robots_gazebo/config/slam/: mr_slam_demo_config.sh  simulation_config.sh  unset_registered_agents.sh
csl_robots_gazebo/config/slam/scenario_coords/: ktM.sh  ktM2.sh  simul.sh  test
csl_robots_gazebo/launch/: run_graphslam_simul.launch  setup_robots.launch  setup_simulation.launch  setup_simulation_env.launch  setup_single_ar_sys.launch  setup_single_robot.launch
csl_robots_gazebo/launch/plumbing/: README.md  run_single_graphSLAM_simul.launch  setup_robots.launch  setup_single_ar_sys.launch  setup_single_robot.launch  setup_single_robot_control.launch  setup_visuals.launch
csl_robots_gazebo/launch/porcelain/: README.md  run_graphSLAM_simul.launch  setup_simulation_env.launch
csl_robots_gazebo/models/cafe/: cafe_world.sdf
csl_robots_gazebo/models/ktM_second_floor_unused_office/: model.config  model.sdf
csl_robots_gazebo/models/room1/: model.config  model.sdf
csl_robots_gazebo/nodes/: environ_parser.py  graphslam_demo.py  graphslam_launcher.py  gt_poses_setter.py  robot_spawner.py  run_mr_graphslam_demo.py
csl_robots_gazebo/nodes/misc/: custom_exceptions.py
csl_robots_gazebo/rosbags/: cmd_vel_sample_data.bag  simul_input.bag
csl_robots_gazebo/rviz/: mr_graphslam.rviz  sr_graphslam.rviz
csl_robots_gazebo/scripts/: run_graphslam_demo.sh
csl_robots_gazebo/worlds/: ktM.world  ktM2.world  mr_graphslam.world  simul.world
launch/: setup_experiment.launch  setup_youbot.launch
launch/plumbing/: setup_drivers_pioneer_poulias.launch  setup_laser_hokuyo.launch  setup_multimaster.launch
launch/porcelain/: README.md  setup_experiment.launch  setup_roof_cameras.launch
misc/: custom_exceptions.py
scripts/ad_hoc_network/: README.md
