<?xml version="1.0"?>
<package>
  <name>csl_common</name>
  <version>0.0.0</version>
  <description>The csl_common package
      Package holding common code that is used in the csl_* packages
  </description>

  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <author email="nickkouk@gmail.com">Nikos Koukis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>master_discovery_fkie</build_depend>
  <build_depend>master_sync_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>master_discovery_fkie</run_depend>
  <run_depend>master_sync_fkie</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
