<?xml version="1.0"?>
<package>
  <name>csl_mr_slam</name>
  <version>0.0.0</version>
  <description>ROS Packages for running multi-robot SLAM for the Control Systems Lab of NTUA</description>

  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <author email="nickkouk@gmail.com">Nikos Koukis</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <metapackage/>
  </export>
</package>
