<?xml version="1.0"?>
<package>
  <name>csl_robots_gazebo</name>
  <version>0.0.0</version>
  <description>
      The csl_robots_gazebo package

      Gazebo-related files for running simulations on multi-robot graphSLAM
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>ar_sys</build_depend>
  <build_depend>rqt_robot_steering</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>ar_sys</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
