<?xml version="1.0"?>
<package>
  <name>csl_robots_gazebo</name>
  <version>0.0.0</version>
  <description>
      The csl_robots_gazebo package

      Gazebo-related files for running simulations of single- and multi-robot graphSLAM.

      models/
          Directory contains models to be imported in worlds utilised in
          graphSLAM simulations
        worlds/
          Directory containing Gazebo worlds for simulations.
      config/
          Directory contains configuration files, mostly for bash, to setup
          necessary actiosn and variables for running a graphSLAM simulation
      nodes/
          Python scripts for automating the creation and management of running
          *multiple* instances of tasks associated with graphSLAM.

      See the corresponding subfolders (as well as file docstrings) for more
      details on the underlying files.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>ar_sys</build_depend>
  <build_depend>rqt_robot_steering</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>mrpt_graphslam_2d</build_depend>
  <build_depend>csl_common</build_depend>

  <run_depend>ar_sys</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>mrpt_graphslam_2d</run_depend>
  <run_depend>csl_common</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
